Bug 1621273 - Value attribute changes can affect step validity even if the input value doesn't change. r=smaug

If the actual input value didn't change, we'd skip updating form validity, but
that's not always correct because GetStepBase() depends on the value attribute.

Differential Revision: https://phabricator.services.mozilla.com/D66836